# SJTU_InformationGrabber

./: .env.example  .gitignore  README.md  pyproject.toml
src/web_bugger/: __init__.py  cli.py  config.py  models.py  monitor.py  notifier.py  scraper.py  storage.py
tests/: test_models.py  test_notifier.py  test_scraper.py  test_storage.py
